--- a/200301-EDA&model-yuqi.Rmd
+++ b/200301-EDA&model-yuqi.Rmd
@@ -5,6 +5,13 @@ date: "3/1/2020"
 output: html_document
 ---
 
+---
+title: "200301-EDA_and_model-yuqi"
+author: "Yuqi Miao ym2771"
+date: "3/1/2020"
+output: html_document
+---
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
@@ -83,12 +90,14 @@ NR = function(data, beta_start,tol = 1e-10, max = 200){
   return(res)
 }
 
-NR(cancer_scale, rep(0.02,11))
+NR_result = NR(cancer_scale, rep(0.02,11))
+
+NR_coeff =  NR_result[dim(NR_result)[1], -1:-2]
 ```
 
 # validation using glm
 ```{r}
-cancer_fit = glm(cancer$diagnosis~cancer_scale, family = binomial(link = "logit"))
+cancer_fit = glm(response~., data = cancer_scale,family = binomial(link = "logit"))
 summary(cancer_fit)
 
 # same results with NR
@@ -101,8 +110,8 @@ summary(cancer_fit)
 
 ##
 ```{r}
-lambda_max = max(abs(coef(cancer_fit))) ## warm start
-tuning_grid = seq(10, 1, length = 100) ## tuning seq
+lambda_max = max(abs(NR_coeff)) ## warm start
+tuning_grid = seq(lambda_max, 1, length = 100) ## tuning seq
 ## function of lasso coordinate descent algorithm
 # input:
 # data: y -- binary response;
@@ -126,8 +135,8 @@ tuning_grid = seq(10, 1, length = 100) ## tuning seq
 
 lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200){
   ## create fold
-  folds = createFolds(data$response,k = 5, returnTrain = T)
-  
+  folds = createFolds(data$response,k = k, returnTrain = T)
+  cv_result = c(k = 0,best_lambda = 0, beta_vec = beta_vec, g.stat_tr = Inf, g.stat_te = Inf)
   ## lasso coord des for train data
   for (i in 1:k) {
     tr_rows = folds[[i]]
@@ -136,8 +145,11 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
     n_tr = dim(train)[1]
     x_tr = as.matrix(train[,1:dim(train)[2]-1]) # dim = (0.8*569, 11)
     y_tr = as.matrix(train[,dim(train)[2]]) # dim = (0.8*569, 1)
+    x_te = as.matrix(test[,1:dim(test)[2]-1]) # dim = (0.2*569, 11)
+    y_te = as.matrix(test[,dim(test)[2]]) # dim = (0.2*569, 1)
+    res = c()
     ## for every lambda
-    for (lambda in tune_grid) {
+    for (lambda in sort(tune_grid, decreasing = T)) {
       theta_vec = x_tr%*%beta_vec # dim = (455,1), theta for every obs
       pi_vec = exp(theta_vec)/(1+exp(theta_vec)) # dim = (455,1), pi for every obs
       w_vec = pi_vec*(1-pi_vec) # dim = (455,1), weight for every obs 
@@ -146,7 +158,8 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
       cur_target = (-1/2*n_tr)*t((w_res_vec))%*%(w_res_vec) + lambda*sum(abs(beta_vec[-1]))
       pre_target = -Inf
       time = 0
-      res = c(k = k,lambda = lambda,time = time, cur_target = cur_target, beta_vec = beta_vec)
+      names(beta_vec) = paste("beta_",0:10, sep = "")
+      res = rbind(res,c(k = k,lambda = lambda,time = time, cur_target = cur_target, beta_vec))
       while((abs(pre_target-cur_target)>tol) & time < max){
         time = time+1
         pre_target = cur_target
@@ -175,23 +188,53 @@ lasso_co_des = function(data, beta_vec,  k = 5, tune_grid,tol = 1e-10, max = 200
         w_res_vec = sqrt(w_vec)*(z_vec - theta_vec)
         cur_target = (-1/2*n_tr)*t((w_res_vec))%*%(w_res_vec) +lambda*sum(abs(beta_vec[-1]))
         res = rbind(res,c(k = k,lambda = lambda,time = time, cur_target = cur_target, beta_vec))
-        }
+      }
     }
-  }
+  ## choose lambda
   res = as.tibble(res)
-  return(res)
+  beta_lambda = res %>% 
+    group_by(lambda) %>% 
+    filter(cur_target == max(cur_target)) %>%  
+    dplyr::select(contains("beta"))
+  beta_lambda_m = as.matrix(beta_lambda[2:dim(beta_lambda)[2]]) # dim = (194, 11)
+  ## use train dataset to choose lambda
+  pi_hat = exp(x_tr %*% t(beta_lambda_m))/(1+exp(x_tr %*% t(beta_lambda_m)))
+  #residual_lambda = rep(y_tr,dim(beta_lambda_m)[1]) - pi_hat
+  #MSE_train = as.vector(rowSums(t(residual_lambda^2)))
+  g.res = (rep(y_tr,dim(beta_lambda_m)[1]) - pi_hat)/sqrt(pi_hat*(1-pi_hat))
+  g.stat_tr = as.vector(rowSums(t(g.res^2)))
+  best_result = as.tibble(cbind(beta_lambda,g.stat_tr = g.stat_tr)) %>% 
+    filter(g.stat_tr == min(g.stat_tr)) 
+  
+  # use test datasets to evaluate
+  best_result_m = as.matrix(best_result[3:dim(best_result)[2]-1])
+  pi_hat_te = exp(x_te %*% t(best_result_m))/(1+exp(x_te %*% t(best_result_m)))
+  #residual_test = y_te - pi_hat_test
+  #MSE_test = as.vector(rowSums(t(residual_test^2)))
+  g.res_te = (y_te - pi_hat_te)/sqrt(pi_hat_te*(1-pi_hat_te))
+  g.stat_te = as.vector(rowSums(t(g.res_te^2)))
+  
+  cv_result = rbind(cv_result, c(k = i,best_lambda = best_result$lambda, beta_vec = best_result[3:dim(best_result)[2]-1], g.stat_tr = best_result$g.stat_tr, g.stat_te = g.stat_te))
+  #cv_result = as.tibble(cv_result)  
+  }
+  
+  return(cv_result)
 }
-x = lasso_co_des(data = cancer_scale, beta_vec = rep(0.02,11), k = 1,tune_grid = tuning_grid,max = 500)
+x = lasso_co_des(data = cancer_scale, beta_vec = rep(0.02,11), k = 5,tune_grid = tuning_grid,max = 200)
+
 x
 
-for (lambda in tuning_grid) {
-  print(lambda)
-}
 ```
 
-## weight is 0 then the theta is 0 which is in denominator, how to fix?
+## instead of using MSE, using pearson chi-square 
 
-## lambda??
+
+
+
+
+
+
+
 
 
 
