--- a/Matrix notation from Sibei.Rmd
+++ b/Matrix notation from Sibei.Rmd
@@ -20,13 +20,13 @@ Log likelihood function:
 $$l(y,\pi)=\sum_{i=1}^n l(y_i,\pi_i)=\sum_{i=1}^n(y_ilog\frac{\pi_i}{1-\pi_i}+log(1-\pi_i))\\=\sum_{i=1}^n(y_ilog\frac{\pi_i}{1-\pi_i}+log(1-\pi_i))$$
 Replacing $\pi$ with $\theta$:
 
-$$l(y,\theta)=\sum_{i=1}^n(y_i\theta_i-log(1+e^{\theta_i}))=\mathbf Y^T\boldsymbol \theta-n\times log(1+e^{\boldsymbol \theta})$$
+$$l(\mathbf Y,\boldsymbol\theta)=\sum_{i=1}^n(y_i\theta_i-log(1+e^{\theta_i}))=\mathbf Y^T\boldsymbol \theta-n\times log(1+e^{\boldsymbol \theta})$$
 Due to the relationship:
 $$\mathbf x_i \boldsymbol \beta= \theta_i \ \ \ \ \ \ \ \mathbf X\boldsymbol \beta=\boldsymbol \theta $$
 Take $\beta$ into log likelihood function:
-$$l(y,\beta)=\sum_{i=1}^n(y_i\mathbf x_i\boldsymbol \beta-log(1+e^{\mathbf x_i\boldsymbol \beta}))\\=Y^T\mathbf x_i\boldsymbol \beta-n\times log(1+e^{\mathbf x_i\boldsymbol \beta}))$$
+$$l(\mathbf Y,\boldsymbol\beta)=\sum_{i=1}^n(y_i\mathbf x_i\boldsymbol \beta-log(1+e^{\mathbf x_i\boldsymbol \beta}))\\=Y^T\mathbf x_i\boldsymbol \beta-n\times log(1+e^{\mathbf x_i\boldsymbol \beta}))$$
 Take the first derivative of log likelihood function about $\boldsymbol \beta$ to get the gradient:
-$$\nabla f(y,\theta)=(\frac{\partial\boldsymbol \theta}{\partial \boldsymbol\beta})^T\times \frac{\partial l(y,\beta)}{\partial \boldsymbol \theta}\\=\mathbf X^T(\mathbf Y-\frac{e^\boldsymbol \theta}{1+e^\boldsymbol \theta})$$
+$$\nabla f(\mathbf Y,\boldsymbol\theta)=(\frac{\partial\boldsymbol \theta}{\partial \boldsymbol\beta})^T\times \frac{\partial l(y,\beta)}{\partial \boldsymbol \theta}\\=\mathbf X^T(\mathbf Y-\frac{e^\boldsymbol \theta}{1+e^\boldsymbol \theta})$$
 
 Take derivative of score function to get the Hessian:
-$$\nabla^2 f(y,\theta)=-\mathbf X^Tdiag(\pi_i(1-\pi_i))\mathbf X$$
+$$\nabla^2 f(\mathbf Y,\boldsymbol\theta)=-\mathbf X^Tdiag(\pi_i(1-\pi_i))\mathbf X$$
