--- a/NR&log-lasso-sibei.Rmd
+++ b/NR&log-lasso-sibei.Rmd
@@ -105,7 +105,6 @@ result3[nrow(result3),]
 ```
 
 
-## dosen't work i don't know why
 # Logistic Lasso
 ```{r}
 ori_linear=glm(y_matrix~x_matrix[,-1],family=binomial(link='logit'))
@@ -127,8 +126,9 @@ lambdas=seq(lambda_max,0,by=-2)
 # when lambda=max_lambda
 beta_1=rep(0,11)
 
+
 # working stuff
-quadratic_appro = function(beta_vec,lambda){
+ quadratic_appro = function(beta_vec,lambda){
   x = x_matrix
   y = y_matrix
   pi=exp(x%*%(beta_vec))/(1+exp(x%*%beta_vec))
@@ -140,19 +140,18 @@ quadratic_appro = function(beta_vec,lambda){
   beta[1]=mean(y_star1)
   beta_update=c(beta[1],beta_vec[2:11])
   i=2
-  for (i in 1:11){
+  for(i in 2:11){
     y_star2=zi-x[,-i]%*% beta_update[-i]
     beta[i]=sum(wi*x[,i]*y_star2)
-    beta[i]=S(beta[i],lambda)/sum(wi*(x[,i]^2))
+    beta[i]=S(beta[i],lambdas[2])/sum(wi*(x[,i]^2))
     beta_pre=beta_update
-    beta_update=c(beta_pre[1:i-1],beta[i],beta_pre[i+1:11])
+    if(i!=11){beta_update=c(beta_pre[1:i-1],beta[i],beta_pre[(i+1):11])}else
+    {beta_update = c(beta_pre[1:i-1],beta[i])}
     i=i+1
   }
-  return(beta_update)
+ return(beta_update)
 }
 
-
-quadratic_appro(beta_1,lambdas[2])
 
 ```
 
